--- a/style.css
+++ b/style.css
@@ -26,14 +26,19 @@
 	--fs-700: 2.25rem;
 	--fs-800: 2.5rem;
 	--fs-900: 3rem;
-
 	--fs-extra-large: 3.75rem;
+
+	/* padding for body sides*/
+	--padding-900: 9rem;
+	--padding-400: 4rem;
+	--padding-100: 1.5rem;
 
 	/* desktop sizes */
 	--fs-body: var(--fs-300);
 	--fs-primary-heading: var(--fs-900);
 	--fs-secondary-heading: var(--fs-600);
 	--fs-nav: var(--fs-300);
+	--padding-body: var(--padding-900);
 }
 
 /* *CSS reset */
@@ -131,6 +136,12 @@ body {
 	font-size: var(--fs-body);
 	font-family: var(--ff-primary);
 	color: var(--clr-primary);
+	padding: 0 var(--padding-body);
+	background-color: var(--clr-neutral-100);
+}
+
+.container {
+	display: flex;
 }
 
 /* *Responsiblity */
@@ -140,6 +151,7 @@ body {
 		--fs-body: var(--fs-400);
 		--fs-primary-heading: var(--fs-extra-large);
 		--fs-nav: var(--fs-base);
+		--padding-body: var(--padding-400);
 	}
 }
 /* mobile sizes */
@@ -149,5 +161,6 @@ body {
 		--fs-primary-heading: var(--fs-extra-large);
 		--fs-secondary-heading: var(--fs-700);
 		--fs-nav: var(--fs-500);
+		--padding-body: var(--padding-100);
 	}
 }
