--- a/style.css
+++ b/style.css
@@ -553,6 +553,10 @@ footer {
 		padding: 0 16rem;
 		height: 100%;
 	}
+	section,
+	#prices {
+		scroll-margin-top: 0;
+	}
 
 	.home-right > img {
 		width: 512px;
